@@ -1,4 +1,8 @@
-﻿w17 23.03.2016 17:59:00 +0300 - build 4591
+﻿drkns 23.03.2016 20:31:08 +0200 - build 4592
+
+1. С форума: Не логичное поведение при удалении сетевого диска
+
+w17 23.03.2016 17:59:00 +0300 - build 4591
 
 1. M#3089: Мелкая правка в панели информации (Ctrl+L)
 
